# Axiom

./: .gitignore  NN.py  README.md  manual.md  pyproject.toml  test_xor.py
docs/: documentation.md
src/Axiom/: __init__.py
src/Axiom/core/: base.py  losses.py
src/Axiom/neural/: activations.py  engine.py  layers.py
src/Axiom/trees/: decison_tree.py
tests/: decision_tree_test.py  linear_regression_test.py  linear_test.py  logisitic_regression_test.py  refactoring_test.py  test_xor.py
