[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "axiom-ml"
version = "0.1.0"
description = "Axiom is a Python library for building and deploying machine learning models."
authors = [{ name = "BenBettayeb Tammam", email = "tambett10@gmail.com" }]
dependencies = [
    "numpy >= 2.4.3",
]     
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]


[project.urls]
Homepage = "https://github.com/tammam-bt/Axiom.git"

[tool.pytest.ini_options]
testpaths = ["tests"]